objects/SH2__DSH_Setting_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SH2__Alert_Email__c</fullName>
        <inlineHelpText>This is an old field that is no longer in use.</inlineHelpText>
        <label>Deprecated</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SH2__Alert_Emails__c</fullName>
        <inlineHelpText>Email addresses that will be sent usage alerts (multiple email addresses may be seperated by a comma EX: test@email.com,email@test.com).</inlineHelpText>
        <label>Data Usage Alert Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Alert_Threshold__c</fullName>
        <inlineHelpText>When the data usage reaches the input percentage a notification will be sent out.</inlineHelpText>
        <label>Alert Threshold (In Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SH2__Data_Storage_Cost__c</fullName>
        <inlineHelpText>The value in this field is used to represent the cost of 500 MB of Data Storage. This should only change if you are purchasing data storage at a discounted rate.</inlineHelpText>
        <label>Data Storage Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SH2__Force_Preview__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>With this setting enabled, it will force a record preview when creating a new Storage Recycle Job.</inlineHelpText>
        <label>Force Record Preview On Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Increment__c</fullName>
        <inlineHelpText>This field in combination with the schedule unit field will determine how often Storage Helper will run if manually scheduled.</inlineHelpText>
        <label>Schedule Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Last_Email_Sent__c</fullName>
        <label>Last Notification Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SH2__Last_Usage_Tracking_Run__c</fullName>
        <label>Last Usage Tracking Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SH2__Max_Records_To_Delete__c</fullName>
        <defaultValue>20000</defaultValue>
        <inlineHelpText>The maximum number of records that will be deleted each time Storage Helper is run. The maximum number of records that can be stored in the recycling bin is 25,000.</inlineHelpText>
        <label>Maximum Number Of Records To Recycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Months_To_Keep_Backups__c</fullName>
        <inlineHelpText>The number of months Storage Helper Backups will be kept for. If blank backups will be kept forever.</inlineHelpText>
        <label>Number Of Months To Keep Backups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH2__Next_Scheduled_Run__c</fullName>
        <label>Next Scheduled Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SH2__Run_Mode__c</fullName>
        <label>Run Mode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Show_Tutorial__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>With this setting checked the Storage Helper new user tutorial will be enabled. The new user tutorial will walk you through the creation of your first Storage Recycle Job.</inlineHelpText>
        <label>Show New User Tutorial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Track_Object_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With this setting checked a Storage Usage Tracking record will be created each month for every object in your environment. Please Note: this will consume data storage.</inlineHelpText>
        <label>Track Monthly Object Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Track_Storage_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With this setting checked two Storage Usage Tracking records will be created each month to track storage usage.</inlineHelpText>
        <label>Track Monthly Storage Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH2__Tutorial_Step__c</fullName>
        <label>Tutorial Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Unit__c</fullName>
        <inlineHelpText>This field in combination with the schedule increment field will determine how often Storage Helper will run if manually scheduled.</inlineHelpText>
        <label>Schedule Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Update_Url_Param__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked the Storage Recycle Job page refresh every time a user selects a different Storage Recycle Job. A URL parameter will be added that contains the settings ID. (Please Note: this setting is mainly used for troubleshooting purposes)</inlineHelpText>
        <label>Update URL Parameters</label>
        <type>Checkbox</type>
    </fields>
    <label>Storage Helper Configuration</label>
</CustomObject>